--- a/第五章 函数/函数的嵌套调用/函数的嵌套调用.vcxproj
+++ b/第五章 函数/函数的嵌套调用/函数的嵌套调用.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1171fd29-c77d-42c1-88d6-457c191d7496}</ProjectGuid>
-    <RootNamespace>作业题</RootNamespace>
+    <ProjectGuid>{1da27162-7f10-4fc6-8370-f894daca4ddd}</ProjectGuid>
+    <RootNamespace>函数的嵌套调用</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="func.c" />
     <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="func.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
