--- a/第四章指针/作业题/作业题.vcxproj
+++ b/第四章指针/作业题/作业题.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d81c2c82-a774-4f8e-a1cb-e7e9557a50cd}</ProjectGuid>
-    <RootNamespace>指针的传递与偏移</RootNamespace>
+    <ProjectGuid>{1171fd29-c77d-42c1-88d6-457c191d7496}</ProjectGuid>
+    <RootNamespace>作业题</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>作业1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
